nowrap added to convo name to prevent wrapping for very long convo names

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -691,6 +691,7 @@ ul.subsection_tabs li.tab a {
   overflow: hidden;
   position: absolute;
   top: 5px;
+  white-space: nowrap;
 }
 .sbutton {
   background: #666666;
